--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -424,10 +424,11 @@
   
         <h3 id="hdng8">Farming</h3>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
+ <div id="connect-farming-income1"> 
 <p>If you earn farming income, your income from that business is treated the same as any other business income. If your farming activities take place on a reserve, your farming income is generally tax-exempt. If your farming activities take place mainly off a reserve, you have to pay tax on your farming income.</p>
 <p>If you are a grain, vegetable, or fruit farmer, the location of the land where your crops are grown or harvested is the most important factor in connecting your income to a reserve. If you are a cattle rancher, the location of your rangeland is the most important connecting factor. If you are involved in other types of farming, the location of your farmland may vary in importance, depending on the nature of your business and the facts of your case. For instance, if your income is from a dairy operation, the location of your milking activities is likely more important than the location of your pastures or hayfields.</p>
 <p>If some of your revenue-generating activities from farming take place on a reserve and the rest off a reserve, the exemption may be prorated. Part of your income will therefore be taxable, and part will be exempt from tax. In such a case, your business expenses will generally be allocated to the taxable part of your income in the same ratio, unless another allocation is more reasonable.</p>
-
+</div>
  <p>If the income if for an <strong>employee </strong>of your farming business, the CRA treats the income according to the guidelines, continue to: <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a>.</p>
     
         <h2 id="hdng9">Interest and investment income</h2>
