--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -627,6 +627,7 @@
 </li>
 
 </ul>
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted tax from the payment.</p>   
 	 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></p>
 </li>
@@ -727,6 +728,9 @@
 </ul>
 </li>
 </ul>
+
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted tax from the payment.</p>     
+
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 </li>
 
@@ -854,6 +858,7 @@
 </ul>
 
 </li></ul>
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted tax from the payment.</p>   
 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></p>
 
@@ -926,6 +931,9 @@
 <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
 </ul></li>
 </ul>
+
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted tax from the payment.</p>   
+
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 </li>
 
