--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -668,24 +668,31 @@
  
 <p>You need to determine the portion of the employment-related income of the First Nations employee that is related to tax-exempt employment income when the payment was received as a result of employment income. </p>
 
-<p>Generally, the employment-related income is partly-exempt from income tax if the First Nations employment income that arise from the payment was partly-exempt. </p>
+<p>If the employment-related income is related to <strong>all tax-exempt</strong> First Nations employment income, the  employment-related income will <strong>all be exempt</strong>.</p>
 
-<p>The exemption is prorated to the portion of the employment-related income related to the tax-exempt portion of the employment income.</p>
-
-<p>If that employment income was partly-exempt from income tax, the employment-related income arising from the exempt share of that income will also be exempt from income tax.</p>
+<p>Generally, if the employment-related income is related to <strong>partly-exempt</strong> First Nations employment income, any employment-related income arising from the exempt share of that income will also be tax-exempt.</p>
 
 </div>
 
 </li>
 
 <li><h3 id="tab2-step3">Withhold deductions on the employment-related income paid to the First Nations recipient</h3>
-<p class="mrgn-bttm-lg">Generally, you  <strong>do not</strong> withhold the following deductions on the employment-related income paid to the First Nations recipient regardless if the income is exempt or partly-exempt:</p>
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the employment-related income paid to the First Nations recipient depending if the income is:</p>
 
-<ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI </li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP </li> 
-</ul>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All exempt</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li> 	 
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
+</ul></li>
+<li class="cnjnctn-col"><h4>Partly-exempt</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> Income tax <small>- Withhold <strong>only</strong> on taxable income</small></li> 	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
+ </ul></li></ul>
 
  </li>
 
