--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -214,7 +214,8 @@
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/keeping-records.html">Keeping records</a></p>
 
 <h2 id="h_2">Help for small businesses</h2>
-<p>If you are a small business and would like help in understanding your tax obligations, you can ask for a visit from a Canada Revenue Agency Liaison Officer. Learn more: <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance/liaison-officer-initiative-loi.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cra-liaison-officer">Liaison Officer service - free tax help for small business owners and self-employed individuals</a>.</p>
+<p>If you are a small business and would like help in understanding your tax obligations, you can ask for a visit from a Canada Revenue Agency Liaison Officer. </p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance/liaison-officer-initiative-loi.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cra-liaison-officer">Liaison Officer service - free tax help for small business owners and self-employed individuals</a>.</p>
 
 <h2 id="h_3">Correcting your tax affairs</h2>
 <p>If you would like to correct your tax affairs, you can apply for relief under the Voluntary Disclosure Program.</p>
