--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -150,53 +150,7 @@
 </div></div>
   
 
-<h2 id="h_records">Keeping your records</h2>
-
-
-<h2 id="h_2">Help for small businesses</h2>
-<p>If you are a small business and would like help in understanding your tax obligations, you can ask for a visit from a Canada Revenue Agency Liaison Officer. Learn more: <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance/liaison-officer-initiative-loi.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cra-liaison-officer">Liaison Officer service - free tax help for small business owners and self-employed individuals</a>.</p>
-
-<h2 id="h_3">Correcting your tax affairs</h2>
-<p>If you would like to correct your tax affairs, you can apply for relief under the Voluntary Disclosure Program.</p>
-
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/voluntary-disclosures-program-overview.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_taxes-voluntary-disclosures">Voluntary Disclosures Program &ndash; Introduction</a></p>
-
-<h2 id="h_4">Consequences of non-compliance</h2>
-<p>Depending on the situation, penalties may be assessed. If you do not pay an amount that is due, the CRA may apply interest from the day your payment was due. </p>
-
-<p>Learn more:</p>
-
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance.html">Compliance and enforcement at CRA</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance/combat-tax-crimes.html">Tax evasion, understanding the consequences</a></li>
-</ul>
-
-
-<section id="psb-special" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Tax deductions, tax rates and eligible expenses for a PSB</h2>
-	</header>	<div class="modal-body">		
-	
-<h3>Tax deductions and tax rates</h3>
-<p><span class="fas fa-times text-danger fa-lg"> </span> A PSB is <strong>not eligible </strong>for:</p>
-
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
-</ul>
-<p>This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
-
-
-<h3>Eligible expenses</h3>
-<p>A PSB is <strong>limited </strong>to <strong>all</strong> of the following deduction expenses: </p>
-<ul class="fa-ul">
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Salary and wages the corporation pays to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
-</ul>
-
-
-	</div></section>
-
+<div data-ajax-replace="/cra-arc/payroll/guidance/tax-obligations-self.html#ajax-help"></div>
 
 
             <div id="def-preFooter"></div>
