--- a/subway/fire/2.html
+++ b/subway/fire/2.html
@@ -58,15 +58,40 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>File electronically: Information returns (tax slips and tax summaries)</h1>
-               <ul>
-                  <li><a href="1.html">What to fill out</a></li>
-                  <li><a href="2.html" class="active">When to file</a></li>
-                  <li><a href="3.html">Get ready to file</a></li>
-                  <li><a href="4.html">How to file</a></li>
-                  <li><a href="5.html">Make corrections after filing</a></li>
-				  <li><a href="6.html">Contact us</a></li>
-               </ul>
+               <h1>File Information Returns Electronically</h1>
+		    <h1 property="name" id="wb-cont" class="gc-thickline">what to fill out</h1>
+		 <p>Information returns contain slips and a summary. Depending on the type of information, you may have to issue more than one type of return.</p>   
+             </div>
+		     <h2>What are the benefits of filing electronically?</h2>
+<p>Filing electronically lets you:</p>
+		    <ul>
+  <li>get confirmation within minutes</li>
+  <li>file securely</li>
+  <li>make changes</li>
+  <li>allow another authirized source, such as a tax preparer, to file for you</li>
+  <li>send returns for the previous ten years</li>
+</ul>
+		     </div>
+		    <h2>Types</h2>
+		    <p>Select the type of information return to find out who must fill out, what to report and when to issue slips.</p>
+		    <ul>
+<li><a href="link">AGR-1, Statement of Farm-Support Payments</a></li>
+<li><a href="link">NR4, Statement of Amounts Paid or Credited to Non-Residents of Canada</a></li>
+<li><a href="link">T3, Statement of Trusts Income Allocations and Designations</a></li>
+<li><a href="link">T3GR, Group Income Tax and Information Return for RRSP, RRIF, RESP, or RDSP Trusts</a></li>
+<li><a href="link">T3P, Employees’ Pension Plan Income Tax Return</a></li>
+<li><a href="link">second item</a></li>	
+<li><a href="link">second item</a></li>	
+<li><a href="link">second item</a></li>
+<li><a href="link">second item</a></li>	
+<li><a href="link">second item</a></li>	
+<li><a href="link">second item</a></li>
+<li><a href="link">second item</a></li>	
+<li><a href="link">second item</a></li>	
+<li><a href="link">second item</a></li>	
+<li><a href="link">second item</a></li>	
+<li><a href="link">second item</a></li>			    
+</ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">When to file</h1>
             <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
